--- a/src/utils/handlebars/plantillaMail.hbs
+++ b/src/utils/handlebars/plantillaMail.hbs
@@ -8,7 +8,7 @@
 <body>
     <h1>Mail enviado con exito !!!!!</h1>
     <h2>Nombre: {{nombre}}</h2>
-    <h2>Reclamo: {{reclamo}}</h2>
-    
+    <h2>Reclamo: {{estado}}</h2>
+      <h2>Reclamo: {{reclamo}}</h2>
 </body>
 </html>
